Карточки моделей + воспроизведение видео при виюпорте

--- a/src/pages/ford.html
+++ b/src/pages/ford.html
@@ -5,91 +5,105 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!--    <link rel="icon" href="https://garage-codd.ru/favicon.ico"/>-->
+<!--    <meta name="theme-color" content="#000000"/>-->
+<!--    &lt;!&ndash; Primary Meta Tags &ndash;&gt;-->
+<!--    <meta name="title" content="Гараж ЦОДД"/>-->
+<!--    <meta name="description" content="Гараж ЦОДД"/>-->
+<!--    <meta name="keywords" content="Гараж ЦОДД"/>-->
+
+<!--    &lt;!&ndash; Open Graph / Facebook &ndash;&gt;-->
+<!--    <meta property="og:type" content="website"/>-->
+<!--    <meta property="og:url" content="https://garage-codd.ru/"/>-->
+<!--    <meta property="og:title" content="Гараж ЦОДД"/>-->
+<!--    <meta property="og:description" content="Гараж ЦОДД"/>-->
+<!--    <meta property="og:image" content="https://garage-codd.ru/seo.png"/>-->
+
+<!--    &lt;!&ndash; Twitter &ndash;&gt;-->
+<!--    <meta property="twitter:card" content="summary_large_image"/>-->
+<!--    <meta property="twitter:url" content="https://garage-codd.ru/"/>-->
+<!--    <meta property="twitter:title" content="Гараж ЦОДД"/>-->
+<!--    <meta property="twitter:description" content="Гараж ЦОДД"/>-->
+<!--    <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>-->
     <title>Гараж ЦОДД</title>
     <meta name="description" content="Smooth Cam movement"/>
     <link rel="stylesheet" href="../style/style.css">
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script>
-        AFRAME.registerComponent("hotspots", {
-            init: function () {
-                this.el.addEventListener("reloadspots", function (evt) {
-                    //get the entire current spot group and scale it to 0
-                    var currspotgroup = document.getElementById(evt.detail.currspots);
-                    currspotgroup.setAttribute("scale", "0 0 0");
+        setTimeout(() => {
+            AFRAME.registerComponent("hotspots", {
+                init: function () {
+                    this.el.addEventListener("reloadspots", function (evt) {
+                        //get the entire current spot group and scale it to 0
+                        let currspotgroup = document.getElementById(evt.detail.currspots);
+                        currspotgroup.setAttribute("scale", "0 0 0");
 
-                    //get the entire new spot group and scale it to 1
-                    var newspotgroup = document.getElementById(evt.detail.newspots);
-                    newspotgroup.setAttribute("scale", "1 1 1");
-                });
-            }
-        });
+                        //get the entire new spot group and scale it to 1
+                        let newspotgroup = document.getElementById(evt.detail.newspots);
+                        newspotgroup.setAttribute("scale", "1 1 1");
+                    });
+                }
+            });
 
-        AFRAME.registerComponent("spot", {
-            schema: {
-                linkto: { type: "string", default: "" },
-                spotgroup: { type: "string", default: "" },
-                phiStart: { type: "string", default: "" }
-            },
-            init: function () {
-                //add image source of hotspot icon
-                // this.el.setAttribute("src", "#hotspot");
-                //make the icon look at the camera all the time
-                // this.el.setAttribute("look-at", "#cam");
+            AFRAME.registerComponent("spot", {
+                schema: {
+                    linkto: { type: "string", default: "" },
+                    spotgroup: { type: "string", default: "" },
+                    phiStart: { type: "string", default: "" }
+                },
+                init: function () {
+                    this.el.addEventListener("click", () => {
+                        let cam = document.getElementById("cam");
+                        cam.emit("zoomin");
 
-                this.el.addEventListener("click", () => {
-                    var cam = document.getElementById("cam");
-                    cam.emit("zoomin");
+                        let fp = document.getElementById("camfadeplane");
+                        fp.setAttribute("width", "2");
+                        fp.setAttribute("height", "2");
+                        fp.emit("camFadeIn");
 
-                    var fp = document.getElementById("camfadeplane");
-                    fp.setAttribute("width", "2");
-                    fp.setAttribute("height", "2");
-                    fp.emit("camFadeIn");
+                        const reloadSpot = () => {
+                            //set the skybox source to the new image as per the spot
+                            let sky = document.getElementById("skybox");
+                            sky.setAttribute("src", this.data.linkto);
+                            //надобавлял говна но оно не пашет
+                            sky.setAttribute("phi-start", this.data.phiStart);
 
-                    //alert("Start zoom");
+                            let spotcomp = document.getElementById("spots");
+                            let currspots = this.el.parentElement.getAttribute("id");
+                            //create event for spots component to change the spots data
+                            spotcomp.emit("reloadspots", {
+                                newspots: this.data.spotgroup,
+                                currspots: currspots
+                            });
 
-                    const reloadSpot = () => {
-                        //set the skybox source to the new image as per the spot
-                        var sky = document.getElementById("skybox");
-                        sky.setAttribute("src", this.data.linkto);
-                        //надобавлял говна но оно не пашет
-                        sky.setAttribute("phi-start", this.data.phiStart);
+                            //this.setAttribute("camera","fov",80);
+                            cam.emit("zoomout");
 
-                        var spotcomp = document.getElementById("spots");
-                        var currspots = this.el.parentElement.getAttribute("id");
-                        //create event for spots component to change the spots data
-                        spotcomp.emit("reloadspots", {
-                            newspots: this.data.spotgroup,
-                            currspots: currspots
-                        });
+                            let fp = document.getElementById("camfadeplane");
+                            fp.emit("camFadeOut");
 
-                        //this.setAttribute("camera","fov",80);
-                        cam.emit("zoomout");
+                            setTimeout(() => {
+                                fp.setAttribute("width", "0");
+                                fp.setAttribute("height", "0");
+                            }, 1000);
+                        };
+                        setTimeout(reloadSpot, 2000);
+                    });
 
-                        var fp = document.getElementById("camfadeplane");
-                        fp.emit("camFadeOut");
+                    // this.el.addEventListener("mouseleave", function () {
+                    //   var cur = document.getElementById("cursor-visual");
+                    //   cur.emit("stopFuse");
+                    // });
 
-                        setTimeout(() => {
-                            fp.setAttribute("width", "0");
-                            fp.setAttribute("height", "0");
-                        }, 1000);
-                    };
-                    setTimeout(reloadSpot, 2000);
-                });
-
-                // this.el.addEventListener("mouseleave", function () {
-                //   var cur = document.getElementById("cursor-visual");
-                //   cur.emit("stopFuse");
-                // });
-
-                //поменял mouseenter на click. какая то хуйня
-                // this.el.addEventListener("click", function (evt) {
-                //   var cur = document.getElementById("cursor-visual");
-                //   cur.emit("startFuse");
-                // });
-            }
-        });
+                    //поменял mouseenter на click. какая то хуйня
+                    // this.el.addEventListener("click", function (evt) {
+                    //   var cur = document.getElementById("cursor-visual");
+                    //   cur.emit("startFuse");
+                    // });
+                }
+            });
+        }, 1500);
     </script>
-
 </head>
 <body>
 
@@ -151,63 +165,69 @@
                             <ul class="tech_spec__outfit-list">
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_1.svg" alt="Огнетушитель">
+                                        <img src="../img/layout/outfit/amarok/outfit_1.svg" alt="Огнетушитель">
                                     </div>
                                     <span class="tech_spec__outfit-text">Огнетушитель</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_2.svg" alt="Аптечка">
+                                        <img src="../img/layout/outfit/amarok/outfit_2.svg" alt="Аптечка">
                                     </div>
                                     <span class="tech_spec__outfit-text">Аптечка</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_3.svg" alt="Инструменты">
+                                        <img src="../img/layout/outfit/amarok/outfit_3.svg" alt="Инструменты">
                                     </div>
                                     <span class="tech_spec__outfit-text">Инструменты</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_4.svg" alt="Трос">
+                                        <img src="../img/layout/outfit/amarok/outfit_4.svg" alt="Трос">
                                     </div>
                                     <span class="tech_spec__outfit-text">Трос</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_6.svg" alt="Пусковое устройство">
+                                        <img src="../img/layout/outfit/ford/outfit_1.svg" alt="Противооткатные упоры">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Колодки</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/amarok/outfit_6.svg" alt="Пусковое устройство">
                                     </div>
                                     <span class="tech_spec__outfit-text">Пусковое устройство</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_7.svg" alt="Бланки европротокола">
+                                        <img src="../img/layout/outfit/amarok/outfit_7.svg" alt="Бланки европротокола">
                                     </div>
                                     <span class="tech_spec__outfit-text">Бланки европротокола</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_8.svg" alt="Телескопическая лестница">
+                                        <img src="../img/layout/outfit/amarok/outfit_8.svg" alt="Телескопическая лестница">
                                     </div>
                                     <span class="tech_spec__outfit-text">Cкладная лестница</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_9.svg" alt="Домкрат">
+                                        <img src="../img/layout/outfit/amarok/outfit_9.svg" alt="Домкрат">
                                     </div>
                                     <span class="tech_spec__outfit-text">Домкрат</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_10.svg" alt="Дорожные конусы">
+                                        <img src="../img/layout/outfit/amarok/outfit_10.svg" alt="Дорожные конусы">
                                     </div>
                                     <span class="tech_spec__outfit-text">Дорожные конусы</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/outfit_11.svg" alt="Гайковерт">
+                                        <img src="../img/layout/outfit/solaris_gray/outfit_9.svg" alt="Крестообразный ключ">
                                     </div>
-                                    <span class="tech_spec__outfit-text">Гайковерт</span>
+                                    <span class="tech_spec__outfit-text">Крестовой ключ</span>
                                 </li>
                             </ul>
                         </div>
@@ -284,7 +304,14 @@
     </div>
 </section>
 
-<a-scene>
+<a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909"
+         device-orientation-permission-ui="
+ denyButtonText: Отказаться;
+ allowButtonText: Разрешить;
+ cancelButtonText: Закрыть;
+ deviceMotionMessage: Разрешите этому сайту использовать гироскопы вашего устройства для ориентации в&nbsp;пространстве. Так экскурсия станет гораздо интерактивней и&nbsp;увлекательней.;
+ mobileDesktopMessage: Разрешите этому сайту использовать гироскопы вашего устройства для ориентации в&nbsp;пространстве. Так экскурсия станет гораздо интерактивней и&nbsp;увлекательней.;
+ httpsMessage: Зайдите на&nbsp;этот сайт по&nbsp;протоколу HTTPS, чтобы войти в&nbsp;режим&nbsp;VR и&nbsp;предоставить доступ к&nbsp;датчикам устройства.;">
     <a-assets>
         <script id="flatShader" type="x-shader/x-fragment">
           varying vec2 vUv;
@@ -513,55 +540,6 @@
     <a-sky id="skybox" src="#room1" rotation="0 0 0" phi-start="88"></a-sky>
 </a-scene>
 
-<!--<script src="../js/loader.js"></script>-->
-<!--<script>-->
-<!--    const LOADING_TIME = 20000;-->
-<!--    const PERCENT_STEP = 5;-->
-<!--    const COUNT_LOAD_TIME = LOADING_TIME / (100 / PERCENT_STEP);-->
-<!--    let percent = 0;-->
-<!--    let preloader = document.querySelector(".progress-bar");-->
-<!--    const percentEl = document.getElementById("progress-label");-->
-<!--    const barEl = document.getElementById("progress-bar");-->
-<!--    let progressText = document.getElementById("progress_text");-->
-
-<!--    function countLoad() {-->
-<!--        barEl.style.width = "0%";-->
-<!--        percentEl.textContent = `0%`;-->
-<!--        let countInterval = setInterval(function () {-->
-<!--            percent += PERCENT_STEP;-->
-<!--            percentEl.textContent = `${percent}%`;-->
-<!--            barEl.style.width = `${percent}%`;-->
-<!--            if (percent >= 20 && percent < 45) {-->
-<!--                progressText.textContent = 'Экипируемся...';-->
-<!--            } else if (percent >= 45 && percent < 65) {-->
-<!--                progressText.textContent = 'Проводим ТО...';-->
-<!--            }else if (percent >= 65 && percent < 85) {-->
-<!--                progressText.textContent = 'Моем машину...';-->
-<!--            } else if (percent >= 85) {-->
-<!--                progressText.textContent = 'Мы готовы!';-->
-<!--            }-->
-<!--            if (percent === 100) {-->
-<!--                clearInterval(countInterval);-->
-<!--                setTimeout(function () {-->
-<!--                    fadeOutnojquery(preloader);-->
-<!--                }, 100);-->
-<!--            }-->
-<!--        }, COUNT_LOAD_TIME);-->
-<!--    }-->
-<!--    function fadeOutnojquery(el) {-->
-<!--        el.style.opacity = 1;-->
-<!--        let interhellopreloader = setInterval(function () {-->
-<!--            el.style.opacity = el.style.opacity - 0.05;-->
-
-<!--            if (el.style.opacity <= 0.05) {-->
-<!--                clearInterval(interhellopreloader);-->
-<!--                preloader.style.display = "none";-->
-<!--            }-->
-<!--        }, 16);-->
-<!--    }-->
-
-<!--    countLoad();-->
-<!--</script>-->
 <script>
     let currentInfoPanel = null;
 
