--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,26 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!--    <link rel="icon" href="https://garage-codd.ru/favicon.ico"/>-->
+<!--    <meta name="theme-color" content="#000000"/>-->
+<!--    &lt;!&ndash; Primary Meta Tags &ndash;&gt;-->
+<!--    <meta name="title" content="Гараж ЦОДД"/>-->
+<!--    <meta name="description" content="Гараж ЦОДД"/>-->
+<!--    <meta name="keywords" content="Гараж ЦОДД"/>-->
+
+<!--    &lt;!&ndash; Open Graph / Facebook &ndash;&gt;-->
+<!--    <meta property="og:type" content="website"/>-->
+<!--    <meta property="og:url" content="https://garage-codd.ru/"/>-->
+<!--    <meta property="og:title" content="Гараж ЦОДД"/>-->
+<!--    <meta property="og:description" content="Гараж ЦОДД"/>-->
+<!--    <meta property="og:image" content="https://garage-codd.ru/seo.png"/>-->
+
+<!--    &lt;!&ndash; Twitter &ndash;&gt;-->
+<!--    <meta property="twitter:card" content="summary_large_image"/>-->
+<!--    <meta property="twitter:url" content="https://garage-codd.ru/"/>-->
+<!--    <meta property="twitter:title" content="Гараж ЦОДД"/>-->
+<!--    <meta property="twitter:description" content="Гараж ЦОДД"/>-->
+<!--    <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>-->
     <title>Гараж ЦОДД</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
 </head>
@@ -57,12 +77,17 @@
                             </div>
                         </div>
                     </li>
-<!--                    <li class="menu_navigation-item">-->
-<!--                        <div class="menu_wrapper_img">-->
-<!--                            <img src="./img/layout/pages/main/menu_icon/boat.svg" alt="водный патруль" class="menu_nav-img">-->
-<!--                        </div>-->
-<!--                        <a class="menu_navigation-link" href="#situation_centre">водный патруль</a>-->
-<!--                    </li>-->
+                    <li class="menu_navigation-item">
+                        <div class="menu_wrapper_img">
+                            <img src="./img/layout/pages/main/menu_icon/boat.svg" alt="водный патруль" class="menu_nav-img">
+                        </div>
+                        <a class="menu_navigation-link" href="#water_patrol">водный патруль</a>
+                        <div class="menu_preview-block">
+                            <div class="block-wrapper-video">
+                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
+                            </div>
+                        </div>
+                    </li>
 <!--                    <li class="menu_navigation-item">-->
 <!--                        <div class="menu_wrapper_img">-->
 <!--                            <img src="./img/layout/pages/main/menu_icon/bicycle.svg" alt="велопатруль" class="menu_nav-img">-->
@@ -84,21 +109,21 @@
             </nav>
             <div class="flex-filler"></div>
             <div class="menu-media">
-                <a class="media-wrapper" href="#">
+                <a class="media-wrapper" href="https://vk.com/mosroad/?utm-source=garage_codd" target="_blank" rel="noopener">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                     <img class="media-img" src="./img/layout/pages/main/footer/media_vk.svg" alt="vk">
                 </a>
-                <a class="media-wrapper" href="#">
+                <a class="media-wrapper" href="https://t.me/DtRoad/?utm-source=garage_codd" target="_blank" rel="noopener">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                     <img class="media-img" src="./img/layout/pages/main/footer/media_telegram.svg" alt="telegram">
                 </a>
-                <a class="media-wrapper" href="#">
+                <a class="media-wrapper" href="tel:3210">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
@@ -223,28 +248,28 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a class="garage_model_card swiper-slide" href="./pages/solaris_two.html">
-                                    <div class="slid_img">
-                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_green.png" alt="Патрульный седан">
-                                        <video class="menu_preview-video" src="./img/video/salaris.mp4" muted loop playsinline></video>
-                                    </div>
-                                    <div class="slid_info">
-                                        <div class="slid_info-desc">
-                                            <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                            <p class="slid_info-text">Патрульный седан</p>
-                                        </div>
-                                        <div class="slid_info-link">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                                <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                                    <rect width="18" height="18" fill="#D9D9D9"/>
-                                                </mask>
-                                                <g mask="url(#mask0_1137_313)">
-                                                    <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                                </g>
-                                            </svg>
-                                        </div>
-                                    </div>
-                                </a>
+<!--                                <a class="garage_model_card swiper-slide" href="./pages/solaris_two.html">-->
+<!--                                    <div class="slid_img">-->
+<!--                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_green.png" alt="Патрульный седан">-->
+<!--                                        <video class="menu_preview-video" src="./img/video/salaris.mp4" muted loop playsinline></video>-->
+<!--                                    </div>-->
+<!--                                    <div class="slid_info">-->
+<!--                                        <div class="slid_info-desc">-->
+<!--                                            <p class="slid_info-title">Дорожный патруль ЦОДД</p>-->
+<!--                                            <p class="slid_info-text">Патрульный седан</p>-->
+<!--                                        </div>-->
+<!--                                        <div class="slid_info-link">-->
+<!--                                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">-->
+<!--                                                <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">-->
+<!--                                                    <rect width="18" height="18" fill="#D9D9D9"/>-->
+<!--                                                </mask>-->
+<!--                                                <g mask="url(#mask0_1137_313)">-->
+<!--                                                    <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>-->
+<!--                                                </g>-->
+<!--                                            </svg>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </a>-->
                             </div>
                             <div class="swiper-pagination"></div>
                         </div>
@@ -294,28 +319,28 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="garage_model_card NOSLIDE_3" href="./pages/solaris_two.html">
-                            <div class="slid_img">
-                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_green.png" alt="Патрульный седан">
-                                <video class="menu_preview-video" src="./img/video/salaris.mp4" muted loop playsinline></video>
-                            </div>
-                            <div class="slid_info">
-                                <div class="slid_info-desc">
-                                    <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                    <p class="slid_info-text">Патрульный седан</p>
-                                </div>
-                                <div class="slid_info-link">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                            <rect width="18" height="18" fill="#D9D9D9"/>
-                                        </mask>
-                                        <g mask="url(#mask0_1137_313)">
-                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                        </g>
-                                    </svg>
-                                </div>
-                            </div>
-                        </a>
+<!--                        <a class="garage_model_card NOSLIDE_3" href="./pages/solaris_two.html">-->
+<!--                            <div class="slid_img">-->
+<!--                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_green.png" alt="Патрульный седан">-->
+<!--                                <video class="menu_preview-video" src="./img/video/salaris.mp4" muted loop playsinline></video>-->
+<!--                            </div>-->
+<!--                            <div class="slid_info">-->
+<!--                                <div class="slid_info-desc">-->
+<!--                                    <p class="slid_info-title">Дорожный патруль ЦОДД</p>-->
+<!--                                    <p class="slid_info-text">Патрульный седан</p>-->
+<!--                                </div>-->
+<!--                                <div class="slid_info-link">-->
+<!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">-->
+<!--                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">-->
+<!--                                            <rect width="18" height="18" fill="#D9D9D9"/>-->
+<!--                                        </mask>-->
+<!--                                        <g mask="url(#mask0_1137_313)">-->
+<!--                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>-->
+<!--                                        </g>-->
+<!--                                    </svg>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </a>-->
                     </div>
                     <div class="slider_button-wrapper">
                         <div class="traffic_patrol_slider-buttons">
@@ -375,30 +400,30 @@
                             </div>
                         </a>
                     </div>
-                    <div class="traffic_patrol-no-slide-9">
-                        <a class="garage_model_card" href="./pages/solaris_two.html">
-                            <div class="slid_img">
-                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_green.png" alt="Патрульный седан">
-                                <video class="menu_preview-video" src="./img/video/salaris.mp4" muted loop playsinline></video>
-                            </div>
-                            <div class="slid_info">
-                                <div class="slid_info-desc">
-                                    <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                    <p class="slid_info-text">Патрульный седан</p>
-                                </div>
-                                <div class="slid_info-link">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                            <rect width="18" height="18" fill="#D9D9D9"/>
-                                        </mask>
-                                        <g mask="url(#mask0_1137_313)">
-                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                        </g>
-                                    </svg>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
+<!--                    <div class="traffic_patrol-no-slide-9">-->
+<!--                        <a class="garage_model_card" href="./pages/solaris_two.html">-->
+<!--                            <div class="slid_img">-->
+<!--                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_green.png" alt="Патрульный седан">-->
+<!--                                <video class="menu_preview-video" src="./img/video/salaris.mp4" muted loop playsinline></video>-->
+<!--                            </div>-->
+<!--                            <div class="slid_info">-->
+<!--                                <div class="slid_info-desc">-->
+<!--                                    <p class="slid_info-title">Дорожный патруль ЦОДД</p>-->
+<!--                                    <p class="slid_info-text">Патрульный седан</p>-->
+<!--                                </div>-->
+<!--                                <div class="slid_info-link">-->
+<!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">-->
+<!--                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">-->
+<!--                                            <rect width="18" height="18" fill="#D9D9D9"/>-->
+<!--                                        </mask>-->
+<!--                                        <g mask="url(#mask0_1137_313)">-->
+<!--                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>-->
+<!--                                        </g>-->
+<!--                                    </svg>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                    </div>-->
                     <div class="traffic_patrol-text-mobile-1">
                         <p class="traffic_patrol-text">
                             Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсирует по&nbsp;городу. Задача&nbsp;&mdash; регулировать движение сложных участков, помогать водителям при поломке или аварии.
@@ -598,7 +623,7 @@
             </div>
         </section>
 
-        <section class="water_patrol">
+        <section class="water_patrol" id="water_patrol">
             <div class="container_main">
                 <div class="water_patrol_grid-wrapper">
                     <div class="water_patrol_title">
@@ -1032,7 +1057,7 @@
                         <div class="footer-menu-links">
                             <a href="#traffic_patrol" class="footer-menu-link">Дорожный патруль</a>
                             <a href="#situation_centre" class="footer-menu-link">Мобильный ситуационный центр</a>
-<!--                            <a href="#" class="footer-menu-link">Водный патруль</a>-->
+                            <a href="#water_patrol" class="footer-menu-link">Водный патруль</a>
 <!--                            <a href="#" class="footer-menu-link">Велопатруль</a>-->
                             <a href="#help_desk" class="footer-menu-link">Служба помощи</a>
                         </div>
@@ -1062,14 +1087,14 @@
                     </a>
                 </div>
                 <div class="footer-media-4">
-                    <a class="media-wrapper" href="https://vk.com/mosroad" target="_blank" rel="noopener">
+                    <a class="media-wrapper" href="https://vk.com/mosroad/?utm-source=garage_codd" target="_blank" rel="noopener">
                         <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
                         <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
                         <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
                         <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                         <img class="media-img" src="./img/layout/pages/main/footer/media_vk.svg" alt="vk">
                     </a>
-                    <a class="media-wrapper" href="https://t.me/DtRoad" target="_blank" rel="noopener">
+                    <a class="media-wrapper" href="https://t.me/DtRoad/?utm-source=garage_codd" target="_blank" rel="noopener">
                         <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
                         <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
                         <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
