--- a/src/pages/solaris.html
+++ b/src/pages/solaris.html
@@ -5,6 +5,26 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!--    <link rel="icon" href="https://garage-codd.ru/favicon.ico"/>-->
+<!--    <meta name="theme-color" content="#000000"/>-->
+<!--    &lt;!&ndash; Primary Meta Tags &ndash;&gt;-->
+<!--    <meta name="title" content="Гараж ЦОДД"/>-->
+<!--    <meta name="description" content="Гараж ЦОДД"/>-->
+<!--    <meta name="keywords" content="Гараж ЦОДД"/>-->
+
+<!--    &lt;!&ndash; Open Graph / Facebook &ndash;&gt;-->
+<!--    <meta property="og:type" content="website"/>-->
+<!--    <meta property="og:url" content="https://garage-codd.ru/"/>-->
+<!--    <meta property="og:title" content="Гараж ЦОДД"/>-->
+<!--    <meta property="og:description" content="Гараж ЦОДД"/>-->
+<!--    <meta property="og:image" content="https://garage-codd.ru/seo.png"/>-->
+
+<!--    &lt;!&ndash; Twitter &ndash;&gt;-->
+<!--    <meta property="twitter:card" content="summary_large_image"/>-->
+<!--    <meta property="twitter:url" content="https://garage-codd.ru/"/>-->
+<!--    <meta property="twitter:title" content="Гараж ЦОДД"/>-->
+<!--    <meta property="twitter:description" content="Гараж ЦОДД"/>-->
+<!--    <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>-->
     <title>Гараж ЦОДД</title>
     <meta name="description" content="Smooth Cam movement"/>
     <link rel="stylesheet" href="../style/style.css">
@@ -277,7 +297,14 @@
     </div>
 </section>
 
-<a-scene>
+<a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909"
+         device-orientation-permission-ui="
+ denyButtonText: Отказаться;
+ allowButtonText: Разрешить;
+ cancelButtonText: Закрыть;
+ deviceMotionMessage: Разрешите этому сайту использовать гироскопы вашего устройства для ориентации в&nbsp;пространстве. Так экскурсия станет гораздо интерактивней и&nbsp;увлекательней.;
+ mobileDesktopMessage: Разрешите этому сайту использовать гироскопы вашего устройства для ориентации в&nbsp;пространстве. Так экскурсия станет гораздо интерактивней и&nbsp;увлекательней.;
+ httpsMessage: Зайдите на&nbsp;этот сайт по&nbsp;протоколу HTTPS, чтобы войти в&nbsp;режим&nbsp;VR и&nbsp;предоставить доступ к&nbsp;датчикам устройства.;">
     <a-assets>
         <script id="flatShader" type="x-shader/x-fragment">
           varying vec2 vUv;
@@ -326,55 +353,6 @@
     <a-sky id="skybox" src="#room1" rotation="0 0 0" phi-start="91"></a-sky>
 </a-scene>
 
-<!--<script src="../js/loader.js"></script>-->
-<!--<script>-->
-<!--    const LOADING_TIME = 20000;-->
-<!--    const PERCENT_STEP = 5;-->
-<!--    const COUNT_LOAD_TIME = LOADING_TIME / (100 / PERCENT_STEP);-->
-<!--    let percent = 0;-->
-<!--    let preloader = document.querySelector(".progress-bar");-->
-<!--    const percentEl = document.getElementById("progress-label");-->
-<!--    const barEl = document.getElementById("progress-bar");-->
-<!--    let progressText = document.getElementById("progress_text");-->
-
-<!--    function countLoad() {-->
-<!--        barEl.style.width = "0%";-->
-<!--        percentEl.textContent = `0%`;-->
-<!--        let countInterval = setInterval(function () {-->
-<!--            percent += PERCENT_STEP;-->
-<!--            percentEl.textContent = `${percent}%`;-->
-<!--            barEl.style.width = `${percent}%`;-->
-<!--            if (percent >= 50 && percent < 70) {-->
-<!--                progressText.textContent = 'Экипируемся...';-->
-<!--            } else if (percent >= 70 && percent < 90) {-->
-<!--                progressText.textContent = 'Проводим ТО...';-->
-<!--            }else if (percent >= 80 && percent < 90) {-->
-<!--                progressText.textContent = 'Моем машину...';-->
-<!--            } else if (percent >= 90) {-->
-<!--                progressText.textContent = 'Мы готовы!';-->
-<!--            }-->
-<!--            if (percent === 100) {-->
-<!--                clearInterval(countInterval);-->
-<!--                setTimeout(function () {-->
-<!--                    fadeOutnojquery(preloader);-->
-<!--                }, 100);-->
-<!--            }-->
-<!--        }, COUNT_LOAD_TIME);-->
-<!--    }-->
-<!--    function fadeOutnojquery(el) {-->
-<!--        el.style.opacity = 1;-->
-<!--        let interhellopreloader = setInterval(function () {-->
-<!--            el.style.opacity = el.style.opacity - 0.05;-->
-
-<!--            if (el.style.opacity <= 0.05) {-->
-<!--                clearInterval(interhellopreloader);-->
-<!--                preloader.style.display = "none";-->
-<!--            }-->
-<!--        }, 16);-->
-<!--    }-->
-
-<!--    countLoad();-->
-<!--</script>-->
 <script>
 setTimeout(() => {
     let currentInfoPanel = null;
