Эдобавлен солярис серый превью и баг с переключением в солярисе устранен

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                     </li>
                     <li class="menu_navigation-item">
                         <div class="menu_wrapper_img">
-                            <img src="./img/layout/pages/main/menu_icon/bus.svg" alt="Мобильный ситуационный центр" class="menu_nav-img">
+                            <img src="./img/layout/pages/main/menu_icon/bus.svg" alt="Мобильный ситуационный центр ЦОДД" class="menu_nav-img">
                         </div>
                         <a class="menu_navigation-link" href="#situation_centre">Мобильный ситуационный центр</a>
                         <div class="menu_preview-block">
@@ -79,7 +79,7 @@
                     </li>
                     <li class="menu_navigation-item">
                         <div class="menu_wrapper_img">
-                            <img src="./img/layout/pages/main/menu_icon/boat.svg" alt="водный патруль" class="menu_nav-img">
+                            <img src="./img/layout/pages/main/menu_icon/boat.svg" alt="водный патруль ЦОДД" class="menu_nav-img">
                         </div>
                         <a class="menu_navigation-link" href="#water_patrol">водный патруль</a>
                         <div class="menu_preview-block">
@@ -96,12 +96,12 @@
 <!--                    </li>-->
                     <li class="menu_navigation-item">
                         <div class="menu_wrapper_img">
-                            <img src="./img/layout/pages/main/menu_icon/firstaid.svg" alt="Служба помощи" class="menu_nav-img">
+                            <img src="./img/layout/pages/main/menu_icon/firstaid.svg" alt="Служба помощи ЦОДД" class="menu_nav-img">
                         </div>
                         <a class="menu_navigation-link" href="#help_desk">Служба помощи</a>
                         <div class="menu_preview-block">
                             <div class="block-wrapper-video">
-                                <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/salaris_gray.mp4" muted loop playsinline></video>
                             </div>
                         </div>
                     </li>
@@ -938,10 +938,10 @@
 <!--                        </a>-->
 <!--                    </div>-->
                     <div class="slide-5">
-                        <a class="garage_model_card" href="./pages/bus.html">
+                        <a class="garage_model_card" href="./pages/solaris_two.html">
                             <div class="slid_img">
-                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_green.png" alt="Служба помощи ЦОДДр">
-                                <video class="menu_preview-video" src="./img/video/salaris.mp4" muted loop playsinline></video>
+                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДДр">
+                                <video class="menu_preview-video" src="./img/video/salaris_gray.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
