адаптивы для больших моников

--- a/src/index.html
+++ b/src/index.html
@@ -352,7 +352,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="traffic_patrol-no-slide-7">
+                    <div class="traffic_patrol-no-slide-7 parentCardForLargeMonitor">
                         <a class="garage_model_card" href="./pages/amarok.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">
@@ -376,7 +376,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="traffic_patrol-no-slide-8">
+                    <div class="traffic_patrol-no-slide-8 parentCardForLargeMonitor">
                         <a class="garage_model_card" href="./pages/ford.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Патрульный фургон">
@@ -629,7 +629,7 @@
                     <div class="water_patrol_title">
                         <h1 class="water_patrol-title title"><span class="water_patrol-animation-1">водный</span> <span class="water_patrol-animation-2">патруль</span></h1>
                     </div>
-                    <div class="water_patrol_card">
+                    <div class="water_patrol_card parentCardForLargeMonitor">
                         <a class="garage_model_card" href="./pages/amarok.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">
@@ -937,7 +937,7 @@
 <!--                            </div>-->
 <!--                        </a>-->
 <!--                    </div>-->
-                    <div class="slide-5">
+                    <div class="slide-5 parentCardForLargeMonitor">
                         <a class="garage_model_card" href="./pages/solaris_two.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДДр">
