--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!--    <link rel="icon" href="https://garage-codd.ru/favicon.ico"/>-->
+    <link rel="icon" href="https://garage-codd.ru/favicon.ico"/>
 <!--    <meta name="theme-color" content="#000000"/>-->
 <!--    &lt;!&ndash; Primary Meta Tags &ndash;&gt;-->
 <!--    <meta name="title" content="Гараж ЦОДД"/>-->
@@ -1040,7 +1040,6 @@
     </main>
 
     <footer class="footer_main">
-<!--        <p class="footer_title">\ f o o t e r \</p>-->
         <div class="container_main">
             <div class="footer_main_grid-wrapper">
                 <div class="footer-title-1">
