--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!--    <link rel="icon" href="https://garage-codd.ru/favicon.ico"/>-->
+    <link rel="icon" href="https://garage-codd.ru/favicon.ico"/>
 <!--    <meta name="theme-color" content="#000000"/>-->
 <!--    &lt;!&ndash; Primary Meta Tags &ndash;&gt;-->
 <!--    <meta name="title" content="Гараж ЦОДД"/>-->
