ЭЭпереключение iframe в зависимости от экрана

--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -216,7 +216,7 @@
     </div>
 </main>
 
-<iframe src="https://app.vectary.com/p/23bkuyEyPWkahKc2YGpnPH" width="100%" height="100%"></iframe>
+<iframe src="https://app.vectary.com/p/23bkuyEyPWkahKc2YGpnPH" width="100%" height="100%" id="VectaryIframe" class="bus_iframe"></iframe>
 
 <section class="auto_park">
     <div class="container">
