--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -240,7 +240,8 @@
     </div>
 </main>
 
-<iframe src="https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU" width="100%" height="100%"></iframe>
+<iframe src="https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU" width="100%" height="100%" id="VectaryIframe" class="amarok_iframe"></iframe>
+<!--<div class="hideARButton"></div>-->
 
 <section class="auto_park">
     <div class="container">
