--- a/src/pages/ford.html
+++ b/src/pages/ford.html
@@ -252,7 +252,7 @@
     </div>
 </main>
 
-<iframe src="https://app.vectary.com/p/2zkou5LI5mWhXqo06RLBTm" width="100%" height="100%"></iframe>
+<iframe src="https://app.vectary.com/p/2zkou5LI5mWhXqo06RLBTm" width="100%" height="100%" id="VectaryIframe" class="transit_iframe"></iframe>
 
 <section class="auto_park">
     <div class="container">
