--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -252,7 +252,7 @@
     </div>
 </main>
 
-<iframe src="https://app.vectary.com/p/3yUUqLuKMivlvJ7atkLNjW" width="100%" height="100%"></iframe>
+<iframe src="https://app.vectary.com/p/3yUUqLuKMivlvJ7atkLNjW" width="100%" height="100%" id="VectaryIframe" class="solaris_iframe"></iframe>
 
 <section class="auto_park">
     <div class="container">
