--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -242,6 +242,7 @@
 
 <iframe src="https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU" width="100%" height="100%" id="VectaryIframe" class="amarok_iframe"></iframe>
 <!--<div class="hideARButton"></div>-->
+<div id="overlay"></div>
 
 <section class="auto_park">
     <div class="container">
