--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -217,6 +217,7 @@
 </main>
 
 <iframe src="https://app.vectary.com/p/23bkuyEyPWkahKc2YGpnPH" width="100%" height="100%" id="VectaryIframe" class="bus_iframe"></iframe>
+<div id="overlay"></div>
 
 <section class="auto_park">
     <div class="container">
@@ -268,8 +269,7 @@
     </div>
 </section>
 
-<a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909"
-         device-orientation-permission-ui="
+<a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909" device-orientation-permission-ui="
  denyButtonText: Отказаться;
  allowButtonText: Разрешить;
  cancelButtonText: Закрыть;
@@ -542,7 +542,7 @@
                         .forEach(function (cross) {
                             cross.addEventListener("click", function () {
                                 allInfoPanelContainerElements.forEach((container) => {
-                                    if (container.id === infoPanel.id) {
+                                    if (container.id == infoPanel.id) {
                                         container.innerHTML = "";
                                         document
                                             .querySelector("#sphere" + currentInfoPanel)
