--- a/src/pages/ford.html
+++ b/src/pages/ford.html
@@ -253,6 +253,7 @@
 </main>
 
 <iframe src="https://app.vectary.com/p/2zkou5LI5mWhXqo06RLBTm" width="100%" height="100%" id="VectaryIframe" class="transit_iframe"></iframe>
+<div id="overlay"></div>
 
 <section class="auto_park">
     <div class="container">
