--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -253,6 +253,7 @@
 </main>
 
 <iframe src="https://app.vectary.com/p/3yUUqLuKMivlvJ7atkLNjW" width="100%" height="100%" id="VectaryIframe" class="solaris_iframe"></iframe>
+<div id="overlay"></div>
 
 <section class="auto_park">
     <div class="container">
