setTimeout в aframe убран (Ðмешал переходам) нужÐен только для three.js

--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -30,7 +30,7 @@
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
 <!--    <script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script>-->
     <script>
-        setTimeout(() => {
+        // setTimeout(() => {
             AFRAME.registerComponent("hotspots", {
                 init: function () {
                     this.el.addEventListener("reloadspots", function (evt) {
@@ -102,7 +102,7 @@
                     // });
                 }
             });
-        }, 1500);
+        // }, 1500);
     </script>
 </head>
 <body>
@@ -522,7 +522,7 @@
 </a-scene>
 
 <script>
-    setTimeout(() => {
+    // setTimeout(() => {
         let currentInfoPanel = null;
 
         // Open the panel
@@ -589,7 +589,7 @@
                     console.log("Current info panel id: " + currentInfoPanel);
                 });
             });
-    }, 1500);
+    // }, 1500);
 </script>
 </body>
 </html>
