--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="../style/style.css">
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script>
-        setTimeout(() => {
+        // setTimeout(() => {
             AFRAME.registerComponent("hotspots", {
                 init: function () {
                     this.el.addEventListener("reloadspots", function (evt) {
@@ -102,7 +102,7 @@
                     // });
                 }
             });
-        }, 1500);
+        // }, 1500);
     </script>
 </head>
 <body>
@@ -506,7 +506,7 @@
 </a-scene>
 
 <script>
-    setTimeout(() => {
+    // setTimeout(() => {
         let currentInfoPanel = null;
 
         // Open the panel
@@ -573,7 +573,7 @@
                     console.log("Current info panel id: " + currentInfoPanel);
                 });
             });
-    }, 1500);
+    // }, 1500);
 </script>
 
 </body>
