страница катера добавлена

--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
                                             <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                            <p class="slid_info-text">Патрульный пикап</p>
+                                            <p class="slid_info-text">Пикап (Volkswagen Amarok)</p>
                                         </div>
                                         <div class="slid_info-link">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -234,7 +234,7 @@
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
                                             <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                            <p class="slid_info-text">Патрульный фургон</p>
+                                            <p class="slid_info-text">Фургон (Ford Transit)</p>
                                         </div>
                                         <div class="slid_info-link">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -283,7 +283,7 @@
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                    <p class="slid_info-text">Патрульный пикап</p>
+                                    <p class="slid_info-text">Пикап (Volkswagen Amarok)</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -305,7 +305,7 @@
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                    <p class="slid_info-text">Патрульный фургон</p>
+                                    <p class="slid_info-text">Фургон (Ford Transit)</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -361,7 +361,7 @@
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                    <p class="slid_info-text">Патрульный пикап</p>
+                                    <p class="slid_info-text">Пикап (Volkswagen Amarok)</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -385,7 +385,7 @@
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                    <p class="slid_info-text">Патрульный фургон</p>
+                                    <p class="slid_info-text">Фургон (Ford Transit)</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -543,7 +543,7 @@
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Ситуационный центр ЦОДД</p>
-                                    <p class="slid_info-text">Мобильный штаб</p>
+                                    <p class="slid_info-text">Автобус (Man)</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -630,15 +630,15 @@
                         <h1 class="water_patrol-title title"><span class="water_patrol-animation-1">водный</span> <span class="water_patrol-animation-2">патруль</span></h1>
                     </div>
                     <div class="water_patrol_card parentCardForLargeMonitor">
-                        <a class="garage_model_card" href="./pages/amarok.html">
+                        <a class="garage_model_card" href="./pages/kater.html">
                             <div class="slid_img">
-                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">
+                                <img class="menu_preview-img" src="./img/layout/slider/kater.jpg" alt="Катер">
                                 <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Водный патруль ЦОДД</p>
-                                    <p class="slid_info-text">Патрульный катер</p>
+                                    <p class="slid_info-text">Катер</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -946,7 +946,7 @@
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Служба помощи ЦОДД</p>
-                                    <p class="slid_info-text">Патрульный седан</p>
+                                    <p class="slid_info-text">Легковая (Hyundai Solaris)</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
