--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -275,11 +275,11 @@
                                 <img class="gallery_item-img" src="../img/layout/slider/ford.png" alt="ford">
                             </a>
                         </div>
-<!--                        <div class="gallery_item">-->
-<!--                            <a class="gallery_item_link" href="../pages/solaris.html">-->
-<!--                                <img class="gallery_item-img" src="../img/layout/slider/solaris_green.png" alt="solaris">-->
-<!--                            </a>-->
-<!--                        </div>-->
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../pages/kater.html">
+                                <img class="gallery_item-img" src="../img/layout/slider/kater.jpg" alt="kater">
+                            </a>
+                        </div>
                         <div class="gallery_item active">
                             <a class="gallery_item_link" href="#">
                                 <img class="gallery_item-img" src="../img/layout/slider/solaris_gray.png" alt="solaris">
