--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -5,6 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="robots" content="noindex,nofollow" />
+    <meta name="yandex-verification" content="c74167eb0fd8f8fe" />
+<!--    <meta name="yandex" content="noindex,nofollow">-->
+<!--    <meta name="googlebot" content="noindex,nofollow">-->
     <link rel="icon" href="https://garage-codd.ru/favicon.ico"/>
 <!--    <meta name="theme-color" content="#000000"/>-->
 <!--    &lt;!&ndash; Primary Meta Tags &ndash;&gt;-->
