новые страници добавленны

--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -294,6 +294,16 @@
                                 <img class="gallery_item-img" src="../img/layout/slider/bus.png" alt="bus">
                             </a>
                         </div>
+<!--                        <div class="gallery_item">-->
+<!--                            <a class="gallery_item_link" href="../pages/moskvich.html">-->
+<!--                                <img class="gallery_item-img" src="../img/layout/slider/moskvich.png" alt="moskvich">-->
+<!--                            </a>-->
+<!--                        </div>-->
+<!--                        <div class="gallery_item">-->
+<!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
+<!--                                <img class="gallery_item-img" src="../img/layout/slider/velo.png" alt="velo">-->
+<!--                            </a>-->
+<!--                        </div>-->
                     </div>
                 </div>
                 <div class="auto_park_slider-button">
