--- a/src/index.html
+++ b/src/index.html
@@ -287,7 +287,7 @@
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                    <p class="slid_info-text">Пикап (Volkswagen Amarok)</p>
+                                    <p class="slid_info-text">Пикап</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -309,7 +309,7 @@
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                    <p class="slid_info-text">Фургон (Ford Transit)</p>
+                                    <p class="slid_info-text">Фургон</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -365,7 +365,7 @@
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                    <p class="slid_info-text">Пикап (Volkswagen Amarok)</p>
+                                    <p class="slid_info-text">Пикап</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -389,7 +389,7 @@
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                    <p class="slid_info-text">Фургон (Ford Transit)</p>
+                                    <p class="slid_info-text">Фургон</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -547,7 +547,7 @@
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Ситуационный центр ЦОДД</p>
-                                    <p class="slid_info-text">Автобус (Man)</p>
+                                    <p class="slid_info-text">Автобус</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -950,7 +950,7 @@
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Служба помощи ЦОДД</p>
-                                    <p class="slid_info-text">Легковая (Hyundai Solaris)</p>
+                                    <p class="slid_info-text">Легковая</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
